--- a/views/html/admindashboard.html
+++ b/views/html/admindashboard.html
@@ -76,7 +76,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" id = "nav-text" href="#">Daystar Day Care System</a>
             <div class="d-flex align-items-center">
-                <img src="path/to/admin_icon.jpg" alt="Admin" class="rounded-circle" style="width: 40px; height: 40px; margin-right: 10px;">
+                <img src="../../public/images/dayimage.jpg" alt="Admin" class="rounded-circle" style="width: 40px; height: 40px; margin-right: 10px;">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -91,7 +91,7 @@
             <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('newSitter.html');" class="list-group-item list-group-item-action bg-light">Register Babysitter</a>
             <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('allSeaters.html');" class="list-group-item list-group-item-action bg-light">All Sitters</a>
             <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('releaseBaby.html');" class="list-group-item list-group-item-action bg-light">All Babies</a>
-            <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('releaseBaby.html');" class="list-group-item list-group-item-action bg-light">Daily Payment </a>
+            <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('presentSitter.html');" class="list-group-item list-group-item-action bg-light">Daily Payment </a>
             <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('procurement.html');" class="list-group-item list-group-item-action bg-light">Procurement Corner</a>
             <a href="index.html" id = "sidebar-items" class="list-group-item list-group-item-action bg-light">Logout</a>
         </div>
@@ -145,10 +145,11 @@
         </div>
   
   </div>
-
+ 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8bd93dfcff.js" crossorigin="anonymous"></script>
-  
+    <!-- <script src="../../public/js/payment.js"></script> -->
     <script src="../../public/js/present-sitter.js"></script>
+    
 </body>
 </html>
