--- a/views/html/admindashboard.html
+++ b/views/html/admindashboard.html
@@ -76,11 +76,14 @@
         <div class="container-fluid">
             <a class="navbar-brand" id = "nav-text" href="#">Daystar Day Care System</a>
             <div class="d-flex align-items-center">
-                <img src="../../public/images/dayimage.jpg" alt="Admin" class="rounded-circle" style="width: 40px; height: 40px; margin-right: 10px;">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
+              <!-- Add an ID to the image for easy reference -->
+              <img id="admin-profile-image" src="../../public/images/dayimage.jpg" alt="Admin" class="rounded-circle" style="width: 40px; height: 40px; margin-right: 10px;">
+              <!-- Add an ID to the header where the name will be displayed -->
+              <span id="admin-name" class="navbar-text"></span>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+          </div>
         </div>
     </nav>
 
@@ -144,12 +147,10 @@
          
         </div>
   
-  </div>
- 
+  </div> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8bd93dfcff.js" crossorigin="anonymous"></script>
     <!-- <script src="../../public/js/payment.js"></script> -->
-    <script src="../../public/js/present-sitter.js"></script>
-    
+    <script src="../../public/js/present-sitter.js"></script>    
 </body>
 </html>
